--- a/src/main/webapp/lab_bill_collecting_centre.xhtml
+++ b/src/main/webapp/lab_bill_collecting_centre.xhtml
@@ -236,13 +236,13 @@
                                             <h:outputLabel value="Net Total" ></h:outputLabel>
                                             <h:outputLabel id="netTotal" value="#{labBillCollectingController.netTotal}" ></h:outputLabel>
                                             <h:outputLabel value="VAT" ></h:outputLabel>
-                                            <h:outputLabel id="netTotal" value="#{labBillCollectingController.vat}" ></h:outputLabel>
+                                            <h:outputLabel id="vat" value="#{labBillCollectingController.vat}" ></h:outputLabel>
                                             <h:outputLabel value="VAT Plus Nettotal" ></h:outputLabel>
-                                            <h:outputLabel id="netTotal" value="#{labBillCollectingController.vatPlusNetTotal}" ></h:outputLabel>
+                                            <h:outputLabel id="vatTot" value="#{labBillCollectingController.vatPlusNetTotal}" ></h:outputLabel>
                                             
                                             <h:outputLabel value="Tendered" ></h:outputLabel>
                                             <h:inputText autocomplete="off" id="paid" value="#{labBillCollectingController.cashPaid}" >
-                                                <p:ajax process="netTotal paid" update="balance" event="keyup"/>
+                                                <p:ajax process="netTotal paid vat" update="balance" event="keyup"/>
                                             </h:inputText>
                                             <h:outputLabel  value="Balance " ></h:outputLabel>
                                             <h:outputLabel id="balance" value="#{labBillCollectingController.cashBalance}" ></h:outputLabel>
