--- a/src/main/webapp/resources/channel/bill_fees.xhtml
+++ b/src/main/webapp/resources/channel/bill_fees.xhtml
@@ -2,6 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:cc="http://java.sun.com/jsf/composite">
 
     <!-- INTERFACE -->
@@ -19,11 +20,25 @@
             <p:column headerText="Fee Type">
                 <p:outputLabel value="#{bi.fee.feeType}"/>
             </p:column>
-            <p:column headerText="Fee Value">
-                <p:outputLabel value="#{bi.feeValue}"/> 
+            <p:column headerText="Fee Value" styleClass="numberCol">
+                <p:outputLabel value="#{bi.feeValue}">
+                    <f:convertNumber pattern="#,###0.00"  />
+                </p:outputLabel> 
             </p:column>
-            <p:column headerText="Paid Value">
-                <p:outputLabel value="#{bi.paidValue}"/>
+            <p:column headerText="Fee Value" styleClass="numberCol">
+                <p:outputLabel value="#{bi.feeVat}">
+                    <f:convertNumber pattern="#,###0.00"  />
+                </p:outputLabel> 
+            </p:column>
+            <p:column headerText="Fee Value" styleClass="numberCol">
+                <p:outputLabel value="#{bi.feeVatPlusValue}">
+                    <f:convertNumber pattern="#,###0.00"  />
+                </p:outputLabel> 
+            </p:column>
+            <p:column headerText="Paid Value" styleClass="numberCol">
+                <p:outputLabel value="#{bi.paidValue}">
+                    <f:convertNumber pattern="#,###0.00"  />
+                </p:outputLabel>
             </p:column>
 
         </p:dataTable>
