--- a/src/main/webapp/resources/cashier/opdCancelled.xhtml
+++ b/src/main/webapp/resources/cashier/opdCancelled.xhtml
@@ -49,7 +49,7 @@
                 <f:facet name="header">  
                     <h:outputLabel value="Cash"/>
                 </f:facet> 
-                <h:outputLabel rendered="#{b1.paymentMethod=='Cash'}" value="#{b1.vatPlusNetTotal}" >
+                <h:outputLabel rendered="#{b1.paymentMethod=='Cash'}" value="#{b1.vat+b1.netTotal}" >
                     <f:convertNumber pattern="#,##0.00"/>
                 </h:outputLabel>
                 <h:outputLabel rendered="#{b1.paymentMethod!='Cash'}" value="0.00"/>
@@ -58,7 +58,7 @@
                 <f:facet name="header">  
                     <h:outputLabel value="Credit"/>
                 </f:facet> 
-                <h:outputLabel rendered="#{b1.paymentMethod=='Credit'}" value="#{b1.vatPlusNetTotal}" >
+                <h:outputLabel rendered="#{b1.paymentMethod=='Credit'}" value="#{b1.vat+b1.netTotal}" >
                     <f:convertNumber pattern="#,##0.00"/>
                 </h:outputLabel>
                 <h:outputLabel rendered="#{b1.paymentMethod!='Credit'}" value="0.00"/>
@@ -68,7 +68,7 @@
                 <f:facet name="header">  
                     <h:outputLabel value="C Card"/>
                 </f:facet> 
-                <h:outputLabel rendered="#{b1.paymentMethod=='Card'}" value="#{b1.vatPlusNetTotal}"  >
+                <h:outputLabel rendered="#{b1.paymentMethod=='Card'}" value="#{b1.vat+b1.netTotal}"  >
                     <f:convertNumber pattern="#,##0.00"/>
                 </h:outputLabel>
                 <h:outputLabel rendered="#{b1.paymentMethod!='Card'}" value="0.00"/>
@@ -77,7 +77,7 @@
                 <f:facet name="header">  
                     <h:outputLabel value="Checque"/>
                 </f:facet> 
-                <h:outputLabel rendered="#{b1.paymentMethod=='Cheque'}" value="#{b1.vatPlusNetTotal}" >
+                <h:outputLabel rendered="#{b1.paymentMethod=='Cheque'}" value="#{b1.vat+b1.netTotal}" >
                     <f:convertNumber pattern="#,##0.00"/>
                 </h:outputLabel>
                 <h:outputLabel rendered="#{b1.paymentMethod!='Cheque'}" value="0.00"/>
@@ -87,7 +87,7 @@
                 <f:facet name="header">  
                     <h:outputLabel value="Slip"/>
                 </f:facet> 
-                <h:outputLabel rendered="#{b1.paymentMethod=='Slip'}" value="#{b1.vatPlusNetTotal}" >
+                <h:outputLabel rendered="#{b1.paymentMethod=='Slip'}" value="#{b1.vat+b1.netTotal}" >
                     <f:convertNumber pattern="#,##0.00"/>
                 </h:outputLabel>
                 <h:outputLabel rendered="#{b1.paymentMethod!='Slip'}" value="0.00"/>
