Vat CC billing Signed-off-by: Ravisarani <ravisaraniranawaka@gmail.com>

--- a/src/main/webapp/resources/bill/opdCCBillPrintRuhunu.xhtml
+++ b/src/main/webapp/resources/bill/opdCCBillPrintRuhunu.xhtml
@@ -280,7 +280,7 @@
                             </tr>
                             <tr>
                                 <td style="text-align: left; min-width: 3cm;">
-                                    <h:outputLabel value="Net Toatl" />
+                                    <h:outputLabel value="Net Total" />
                                 </td>
                                 <td style="text-align: right!important; ">
                                     <h:outputLabel value="#{cc.attrs.bill.vatPlusNetTotal}">
