--- a/src/main/webapp/channel/channel_report_patient_count.xhtml
+++ b/src/main/webapp/channel/channel_report_patient_count.xhtml
@@ -105,7 +105,7 @@
                                 </p:column>
                                 <p:column>
                                     <f:facet name="header" >
-                                        <p:outputLabel value="Rerfund Bill Count" />
+                                        <p:outputLabel value="Refund Bill Count" />
                                     </f:facet>
                                     <p:outputLabel value="#{b.refundCount}" />
                                 </p:column>
