--- a/src/main/webapp/channel/channel_report_patient_count_income.xhtml
+++ b/src/main/webapp/channel/channel_report_patient_count_income.xhtml
@@ -106,7 +106,7 @@
                                 </p:column>
                                 <p:column style="text-align: right;">
                                     <f:facet name="header" >
-                                        <p:outputLabel value="Rerfund" />
+                                        <p:outputLabel value="Refund" />
                                     </f:facet>
                                     <p:outputLabel value="#{b.refundCount}" >
                                         <f:convertNumber pattern="#,###0.00"  />
