--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -34,6 +34,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="  Bill Detail Summary()" action="/channel/channel_report_by_bill_class"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="  All Department Bill Summary" action="/channel/channel_report_department_wise_bills"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="  All Channel Bills" action="/channel/channel_report_all_bills"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="  All Channel Bill With Vat" action="/channel/channel_report_all_bills_for_vat" style="color: red;"/>
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
@@ -55,6 +56,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Balance(32)" action="/channel/channel_report_agent_balance"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Deposit(36)" action="/channel/channel_report_agent_payment_bill"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Wise Channel Appoinment Total And Count(29 &amp; 30)" action="/channel/channel_report_agent_wise_channel_total"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Agent Wise Channel Appoinment Count Summery" action="/channel/channel_report_agent_wise_channel_total_summery"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Channel Books Report()"  action="/channel/channel_report_agent_referece_book" />
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Details()" action="/channel/channel_report_agent_details"/>
                                     </h:panelGrid>
