--- a/src/main/webapp/reportCashier/report_cashier.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier.xhtml
@@ -95,6 +95,7 @@
                                     <h:panelGrid columns="1" >
                                         <p:commandButton styleClass="linkButton" ajax="false" value="1) List of Bills Raised" action="/opd_bill_report"/>   
                                         <p:commandButton styleClass="linkButton" ajax="false" value="2) OPD payment scheme bills" action="/reportCashier/report_opd_bill_payment_sheame"/> 
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="2) OPD VAT 15%" action="/reportCashier/report_opd_bills_for_vat"/> 
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
