--- a/src/main/webapp/channel/channel_report_scan_channel_count.xhtml
+++ b/src/main/webapp/channel/channel_report_scan_channel_count.xhtml
@@ -24,10 +24,10 @@
                 <p:panel>
                     <h:panelGrid columns="2" >
                         <h:outputLabel value="From Date"/>
-                        <p:calendar value="#{channelReportTempController.fromDate}" navigator="true" pattern="dd MMM yyyy"  >
+                        <p:calendar value="#{channelReportTempController.fromDate}" navigator="true" pattern="dd MMM yyyy hh:mm:ss a"  >
                         </p:calendar>
                         <h:outputLabel value="To Date"/>
-                        <p:calendar value="#{channelReportTempController.toDate}" navigator="true" pattern="dd MMM yyyy" >
+                        <p:calendar value="#{channelReportTempController.toDate}" navigator="true" pattern="dd MMM yyyy hh:mm:ss a" >
                         </p:calendar>
                     </h:panelGrid>
                     <h:panelGrid columns="2" id="pg1" >
@@ -75,8 +75,8 @@
                             <p:row>
                                 <p:column headerText="Consultant" />
                                 <p:column headerText="Count" />
-                                <p:column headerText="Staff Fee" />
                                 <p:column headerText="Hos Fee" />
+                                <p:column headerText="Staff Fee" />
                                 <p:column headerText="Total" />
                             </p:row>
                         </p:columnGroup>
