--- a/src/main/webapp/resources/bill/opdCCBillPrintRuhunu.xhtml
+++ b/src/main/webapp/resources/bill/opdCCBillPrintRuhunu.xhtml
@@ -270,7 +270,7 @@
 
                             <tr>
                                 <td style="text-align: left; min-width: 3cm;">
-                                    <h:outputLabel value="Vat" />
+                                    <h:outputLabel value="Vat (15%)" />
                                 </td>
                                 <td style="text-align: right!important; ">
                                     <h:outputLabel value="#{cc.attrs.bill.vat}">
